--- a/Pig Game/style.css
+++ b/Pig Game/style.css
@@ -37,6 +37,9 @@ body {
     box-shadow: 8px 10px 50px rgba(0, 0, 0, 0.3);
     overflow: hidden;
 }
+.player-0-panel {
+    background-color: rgb(230, 230, 230);
+}
 
 .player-0-panel,
 .player-1-panel {
@@ -69,6 +72,10 @@ body {
 
 .active { background-color: #f7f7f7; }
 .active .player-name { font-weight: 300; }
+
+.player-0-panel {
+    background-color: rgb(240, 240, 240);
+}
 
 .active .player-name::after {
     content: "";
@@ -134,8 +141,8 @@ i {
 }
 
 .btn-new { top: 45px;}
-.btn-roll { top: 432px;}
-.btn-hold { top: 500px;}
+.btn-roll { top: 420px;}
+.btn-hold { top: 495px;}
 
 .dice {
     position: absolute;
