--- a/Pig Game/style.css
+++ b/Pig Game/style.css
@@ -18,6 +18,10 @@
 
 .form-control:focus { outline: none; }
 
+#dice-0 { top: 120px; }
+#dice-1 { top: 250px; }
+
+
 * {
     margin: 0;
     padding: 0;
